Added NA site configuration

--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -27,8 +27,8 @@ energizer.default.password=Energizer@123
 #---------------------------------------------
 # Email setup											   						   #
 #---------------------------------------------
-mail.smtp.server=fitsmtp.care.corp
-mail.smtp.port=25
+mail.smtp.server=
+mail.smtp.port=
 mail.smtp.user=
 mail.smtp.password=
 mail.use.tls=true
@@ -165,6 +165,11 @@ website.personalCare.https=https://dev.edgewell.com:9002
 media.personalCare.http=http://dev.edgewell.com:9001
 media.personalCare.https=https://dev.edgewell.com:9002
 
+website.personalCareNA.http=http://dev.edgewellna.com:9001
+website.personalCareNA.https=https://dev.edgewellna.com:9002
+media.personalCareNA.http=http://dev.edgewellna.com:9001
+media.personalCareNA.https=https://dev.edgewellna.com:9002
+
 storefront.security.default.required.channel=https
 
 #----------------------------------
@@ -265,14 +270,14 @@ hmc.developermode=false
 #------------------------------------------------------------------------------------------
 # Proxy and port Properties
 #------------------------------------------------------------------------------------------
-tomcat.site.proxyName=dev.edgewell.com
-tomcat.site.hostName=edgewell.dev.com
+#tomcat.site.proxyName=dev.edgewell.com
+#tomcat.site.hostName=edgewell.dev.com
 
 # The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
-proxy.http.port=80
+#proxy.http.port=80
 
 # The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
-proxy.ssl.port=443
+#proxy.ssl.port=443
 
 #Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
 tomcat.ajp.useipv=true
