Following changes have been made: 1) changes related to doubleStacked messages 2) UI part for container Line 3)changes related to dropdown i.e to remove "2 Slip Sheet " from dropdown when container height is 20ft

--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -114,6 +114,8 @@ passwordDelimiter=|
 energizer.default.containerHeight=40FT
 energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
 possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE,2 SLIP SHEETS
+possiblePackingOptions.20FT=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
+
 possibleContainerHeights=40FT,20FT
 energizer.disable.packingOption=2 SLIP SHEETS
 
