Made changes in local.properties file related to change EPC-QA url

--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -148,7 +148,7 @@ feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
-simulateTimeOutinSeconds=30
+simulateTimeOutinSeconds=90
 
 #--------------------------------------------------------
 #Biz Talk URL for order simulate, create and report
@@ -173,10 +173,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #---------------------------------------------
 #website url
 #---------------------------------------------
-website.personalCare.http=http://qa.edgewell.com
-website.personalCare.https=https://qa.edgewell.com
-media.personalCare.http=http://qa.edgewell.com
-media.personalCare.https=https://qa.edgewell.com
+website.personalCare.http=http://qa.care.corp
+website.personalCare.https=https://qa.care.corp
+media.personalCare.http=http://qa.care.corp
+media.personalCare.https=https://qa.care.corp
 
 storefront.security.default.required.channel=https
 
@@ -277,7 +277,7 @@ hmc.developermode=false
 #------------------------------------------------------------------------------------------
 # Proxy and port Properties
 #------------------------------------------------------------------------------------------
-tomcat.site.proxyName=qa.edgewell.com
+tomcat.site.proxyName=qa.care.corp
 tomcat.site.hostName=edgewell.qa.com
 
 # The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
