QA changes from Pushpendra

--- a/config/local.properties
+++ b/config/local.properties
@@ -62,8 +62,7 @@ email_Address=Siddaraju.Nagappa@mindtree.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
 
 #Mandatory Feeds for OfflineOrder CSV Processor
 #Basic Mandatory feeds for OfflineOrder CSV Processor are Status,SAPOrderNo,B2BAccount,CreatedByUser,ERPMaterialID,UOM
