--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -63,7 +63,7 @@ email_Address=Surendra.na@mindtree.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
 
 
 #Mandatory Feeds for OfflineOrder CSV Processor
