--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -63,7 +63,8 @@ email_Address=orderportal@edgewell.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
+
 
 
 #Mandatory Feeds for OfflineOrder CSV Processor
@@ -285,8 +286,10 @@ energizer.customer.support.to.email=orderportal@edgewell.com
 cronjobs.from.email=orderportal@edgewell.com 
 
 #ICS email props
-ICS.EMAILID=Erik.Villa@edgewell.com
-ICS.DISPLAYNAME="ICS-MEMBER"
+#ICS.EMAILID=Erik.Villa@edgewell.com
+#ICS.DISPLAYNAME="ICS-MEMBER"
+ICS.EMAILID=EdgewellICS@edgewell.com
+ICS.DISPLAYNAME=EdgewellICS
 
 #Enviorment 
 mail.enviorment=
