--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -64,7 +64,7 @@ email_Address=Surendra.na@mindtree.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
 
 
 #Mandatory Feeds for OfflineOrder CSV Processor
@@ -300,6 +300,7 @@ cronjobs.from.email=epcvalidatione@gmail.com
 #ICS email props
 ICS.EMAILID=Shweta.Sharma@mindtree.com
 ICS.DISPLAYNAME="ICS-MEMBER"
+
 
 #Enviorment 
 mail.enviorment=Qa
