1. Updated to add the calculations of nonPAL products to PAL products in DefaultEnergizerCartService class. 2. Added twenty.feet.container=20FT and forty.feet.container=40FT in local.properties file.

--- a/config/local.properties
+++ b/config/local.properties
@@ -97,6 +97,11 @@ sharedFolderPath=W:\\CSVFeedFolder
 customerUserListPath=w:\\userlists
 
 
+#Catalog Download File Path
+
+
+catalogdownload.downloadPath=Downloads
+
 # Password Properties
 passwordExpiryDays = 120
 passwordNotificationDays = 10
@@ -105,6 +110,18 @@ passwordDelimiter=|
 
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
+energizer.default.containerHeight=40FT
+energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
+possiblePackingOptions=2 SLIP SHEETS,1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
+possiblePackingOptions.20FT=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
+energizer.disable.packingOption=2 SLIP SHEETS
+
+possibleContainerHeights=20FT,40FT
+heightInInches.20FT=87
+heightInInches.40FT=102
+reduced.height=12.7
+twenty.feet.container=20FT
+forty.feet.container=40FT
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
