Changes made related to container optimization 1) To calculate volume for enable 2 slip sheet on the basis cases volume instead of pallet volume. 2) To compare pallet volume with container voloume and based on same consider the volume for pallet

--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -127,6 +127,12 @@ twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
+
+twenty.feet.container.volume.disable=30.44056
+fourty.feet.container.volume.disable=70.62209
+twenty.feet.container=20FT
+forty.feet.container=40FT
+
 excelFileSize=1000000
 
 #------------------------------------------------------ 
