--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -127,6 +127,12 @@ twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
+
+twenty.feet.container.volume.disable=30.44056
+fourty.feet.container.volume.disable=70.62209
+twenty.feet.container=20FT
+forty.feet.container=40FT
+
 excelFileSize=1000000
 
 #------------------------------------------------------ 
