--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -123,13 +123,15 @@ heightInInches.40FT=102
 heightInInches.20FT=87
 reduced.height=12.7
 
+total.palletcount.2slipsheet=44
+
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
 
-twenty.feet.container.volume.disable=30.44056
-fourty.feet.container.volume.disable=70.62209
+twenty.feet.container.volume.disable=28.31680
+fourty.feet.container.volume.disable=60.88122
 twenty.feet.container=20FT
 forty.feet.container=40FT
 
