--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -120,6 +120,8 @@ possiblePackingOptions.20FT=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
 possibleContainerHeights=40FT,20FT
 energizer.disable.packingOption=2 SLIP SHEETS
 
+total.palletcount.2slipsheet=44
+
 heightInInches.40FT=102
 heightInInches.20FT=87
 reduced.height=12.7
@@ -129,8 +131,8 @@ twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
 
-twenty.feet.container.volume.disable=30.44056
-fourty.feet.container.volume.disable=70.62209
+twenty.feet.container.volume.disable=28.31680
+fourty.feet.container.volume.disable=60.88122
 twenty.feet.container=20FT
 forty.feet.container=40FT
 
