--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -113,20 +113,36 @@ passwordDelimiter=|
 #------------------------------------------------------
 energizer.default.containerHeight=40FT
 energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
-possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE,2 SLIP SHEETS
+possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE,2 SLIP SHEETS,2 WOODEN BASE
 possiblePackingOptions.20FT=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
 
 possibleContainerHeights=40FT,20FT
 energizer.disable.packingOption=2 SLIP SHEETS
+twenty.feet.container=20FT
+forty.feet.container=40FT
+
+total.palletcount.2slipsheet=44
+
+reducedVolume.disable.2slipsheet.20FT=2.5
+reducedVolume.disable.2slipsheet.40FT=5
 
 heightInInches.40FT=102
 heightInInches.20FT=87
 reduced.height=12.7
 
+
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
+
+twenty.feet.container.volume.disable=25.7683304
+fourty.feet.container.volume.disable=70.62209
+twenty.feet.container=20FT
+forty.feet.container=40FT
+
+slot.percentage=0.80
+
 excelFileSize=1000000
 
 #------------------------------------------------------ 
