changes made in container height in disable mode in *.properties file

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -131,7 +131,7 @@ twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
 
-twenty.feet.container.volume.disable=28.31680
+twenty.feet.container.volume.disable=25.7683304
 fourty.feet.container.volume.disable=60.88122
 twenty.feet.container=20FT
 forty.feet.container=40FT
