--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -142,7 +142,8 @@ fourty.feet.container.volume.disable=60.88122
 twenty.feet.container=20FT
 forty.feet.container=40FT
 
-slot.percentage=0.80
+slot.percentage.40ft=80
+slot.percentage.20ft=60
 
 excelFileSize=1000000
 
