changes made: 1) Related to invoice 2) change technical and business email id in local.properties file

--- a/envconfig/epc/hybris/prod/local-apache.properties
+++ b/envconfig/epc/hybris/prod/local-apache.properties
@@ -57,8 +57,8 @@ interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
-technical_EmailAddress=Margaret.Lang@edgewell.com,Erik.Villa@edgewell.com
-business_EmailAddress=DavidL.Kronmiller@edgewell.com
+technical_EmailAddress=siddaraju.nagappa@mindtree.com
+business_EmailAddress=EdgewellICS@edgewell.com
 email_Address=orderportal@edgewell.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
