--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -13,7 +13,7 @@ installed.tenants=t1
 
 lang.packs=en,es
 
-forgottenPassword.emailContext.expiresInMinutes=30
+forgottenPassword.emailContext.expiresInMinutes=30tech
 forgottenPassword.emailContext.expiresInSeconds=1800
 
 #---------------------------------------------
@@ -57,8 +57,8 @@ interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
-technical_EmailAddress=Margaret.Lang@edgewell.com,Erik.Villa@edgewell.com
-business_EmailAddress=DavidL.Kronmiller@edgewell.com
+technical_EmailAddress=siddaraju.nagappa@mindtree.com
+business_EmailAddress=EdgewellICS@edgewell.com
 email_Address=orderportal@edgewell.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
