local.properties change

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -13,7 +13,7 @@ installed.tenants=t1
 
 lang.packs=en,es
 
-forgottenPassword.emailContext.expiresInMinutes=30tech
+forgottenPassword.emailContext.expiresInMinutes=30
 forgottenPassword.emailContext.expiresInSeconds=1800
 
 #---------------------------------------------
