Changes made in local.properties file to make default UOM as CS and base*.properties file to add spanish version

--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -216,7 +216,7 @@ db.password=hybris
 # Default value of MOQ  and  Lead Time
 #----------------------------------
 feedprocessor.defalult.moq.value=1
-feedprocessor.defalult.uom.value=PAL
+feedprocessor.defalult.uom.value=CS
 
 
 #----------------------------------
