--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -209,7 +209,7 @@ db.password=hybris
 # Default value of MOQ  and  Lead Time
 #----------------------------------
 feedprocessor.defalult.moq.value=1
-feedprocessor.defalult.uom.value=PAL
+feedprocessor.defalult.uom.value=CS
 #feedprocessor.defalult.leadtime.value=30
 
 #----------------------------------
