--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -213,7 +213,7 @@ db.password=hybris
 # Default value of MOQ  and  Lead Time
 #----------------------------------
 feedprocessor.defalult.moq.value=1
-feedprocessor.defalult.uom.value=PAL
+feedprocessor.defalult.uom.value=CS
 
 #----------------------------------
 #Set the default Log file size
