--- a/config/local.properties
+++ b/config/local.properties
@@ -1,3 +1,4 @@
+
 # place your custom properties into this file instead of modifying the project.properties
 # all properties in this file have higher priority and will overwrite the platform/project.properties settings.
 
@@ -5,12 +6,8 @@ mykey=myvalue
 
 hac.webroot=/hac
 
-
-
 energizerstorefront.webroot=
 b2bStorefrontContextRoot=
-
-b2bstorefront.package=com.energizer.storefront
 
 installed.tenants=t1,junit
 
@@ -28,19 +25,7 @@ isEHPEnabled=false
 energizer.default.password=Energizer@123
 
 #---------------------------------------------
-#Configuration for Permission
-#---------------------------------------------
-
-defaultOrdThresholdPermPerOrder = 160
-
-#---------------------------------------------
-Image Conversion
-#---------------------------------------------
-#imagemagick.bindir=/usr/local/bin/
-#imagemagick.configuration.directory=/usr/local/Cellar/imagemagick/6.7.5-7/etc/ImageMagick/
-
-#---------------------------------------------
-# Email setup                                                                                                                                                                                                                                                                        #
+# Email setup											   						   #
 #---------------------------------------------
 mail.smtp.server=fitsmtp.care.corp
 mail.smtp.port=25
@@ -67,21 +52,17 @@ interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
-interfaceType_EnergizerProductDimension=energizerProductDimensionCSVProcessor
-interfaceType_EnergizerCustomerShiptoAddress=energizerCustomerShipToAddressCSVProcessor
-
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
-technical_EmailAddress=Surendra.na@mindtree.com
-business_EmailAddress=Surendra.na@mindtree.com
-email_Address=Surendra.na@mindtree.com
+technical_EmailAddress=Siddaraju.Nagappa@mindtree.com
+business_EmailAddress=Siddaraju.Nagappa@mindtree.com
+email_Address=Siddaraju.Nagappa@mindtree.com
 
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
 
 #Mandatory Feeds for OfflineOrder CSV Processor
 #Basic Mandatory feeds for OfflineOrder CSV Processor are Status,SAPOrderNo,B2BAccount,CreatedByUser,ERPMaterialID,UOM
@@ -109,19 +90,20 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 #Shared file location
 #------------------------------------------------------
-sharedFolderPath=D:\\CSVFeedFolder
+sharedFolderPath=W:\\CSVFeedFolder
 
-#CustomerUsersList Location
+#-----------------------------------------------------
+#customeruserslist location
+customerUserListPath=w:\\userlists
 
-customerUserListPath=D:\\userlists
 
 #Catalog Download File Path
 
-catalogdownload.filePath=D:\\Export
-catalogdownload.downloadPath=Downloads\\Export
+
+catalogdownload.downloadPath=Downloads
 
 # Password Properties
-passwordExpiryDays = 30
+passwordExpiryDays = 120
 passwordNotificationDays = 10
 previousPasswordCount=6
 passwordDelimiter=|
@@ -130,38 +112,27 @@ passwordDelimiter=|
 #------------------------------------------------------
 energizer.default.containerHeight=40FT
 energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
-possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE,2 SLIP SHEETS,2 WOODEN BASE
+possiblePackingOptions=2 SLIP SHEETS,1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
 possiblePackingOptions.20FT=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
-
-possibleContainerHeights=40FT,20FT
 energizer.disable.packingOption=2 SLIP SHEETS
+
+possibleContainerHeights=20FT,40FT
+heightInInches.20FT=87
+heightInInches.40FT=102
+reduced.height=12.7
 twenty.feet.container=20FT
 forty.feet.container=40FT
-
-total.palletcount.2slipsheet=44
-
-reducedVolume.disable.2slipsheet.20FT=2.5
-reducedVolume.disable.2slipsheet.40FT=5
-
-heightInInches.40FT=102
-heightInInches.20FT=87
-reduced.height=12.7
-
-
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
-fourty.feet.container.volume=70.62209  
+fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
-
-twenty.feet.container.volume.disable=25.7683304
-fourty.feet.container.volume.disable=60.88122
-twenty.feet.container=20FT
-forty.feet.container=40FT
-
-slot.percentage.40ft=70
-slot.percentage.20ft=60
-
 excelFileSize=1000000
+
+#------------------------------------------------------ 
+#Catalog Version Information
+#------------------------------------------------------
+catalogName=personalCareProductCatalog
+version=Online
 
 #----------------------------------------------
 # Solr Server standalone configurations
@@ -180,11 +151,6 @@ solrfacetsearch.synonyms.filter.ignoreCase=true
 solrfacetsearch.stopwords.filter.ignoreCase=true
 
 
-#------------------------------------------------------ 
-#Catalog Version Information
-#------------------------------------------------------
-catalogName=personalCareProductCatalog
-version=Online
 
 
 #invoice piece properties
@@ -206,7 +172,7 @@ simulateTimeOutinSeconds=30
 #--------------------------------------------------------
 simulateURL=http://10.99.13.61:8080/SalesOrderSimulate
 orderSubmitURL=http://10.99.13.61:8080/SalesOrderCreate
-invoicePdfURL=http://10.99.13.61:8080/GenerateURLs
+invoicePdfURL=http://10.99.13.61:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID,SegmentName,FamilyName,GroupName
@@ -234,10 +200,10 @@ storefront.security.default.required.channel=https
 #----------------------------------
 #Oracle DB setup Information
 #----------------------------------
-#db.url=jdbc:oracle:thin:@10.98.1.210:1521:hbd
-#db.driver=oracle.jdbc.driver.OracleDriver
-#db.username=hybris
-#db.password=hybris
+db.url=jdbc:oracle:thin:@10.98.1.210:1521:hbd
+db.driver=oracle.jdbc.driver.OracleDriver
+db.username=hybris
+db.password=hybris
 
 #----------------------------------
 # Default value of MOQ  and  Lead Time
@@ -262,7 +228,7 @@ b2b.MaxUserLimit=10
 default.lead.time.value=30
 
 #------------------------------------------------------------------------
-# set the default B2BUnit Budget & Date format mm/dd/yyyy                                                    #
+# set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
 #------------------------------------------------------------------------
 b2BBudget.OriginalCode=10001
 b2BBudget.Code=1000
@@ -273,7 +239,7 @@ b2BBudget.EndDate=04/15/2099
 b2BBudget.Budget=1000000000
 
 #------------------------------------------
-# set the default B2BUnit cost center       #
+# set the default B2BUnit cost center	  #
 #------------------------------------------
 b2bCostCenter.OriginalCode=10001
 b2bCostCenter.Code=1001
@@ -281,14 +247,14 @@ b2bCostCenter.Name=Print Cost Centre Name
 b2bCostCenter.Isocode=USD
 
 #------------------------------------------
-# set the default storefront page size       #
+# set the default storefront page size	  #
 #------------------------------------------
 storefront.search.pageSize.Desktop=20
 orderHistoryPageSize=20
 defaultLeadTime=30
 
 #------------------------------------------
-# set the default fag and t&c url here       #
+# set the default fag and t&c url here	  #
 #------------------------------------------
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
@@ -306,8 +272,8 @@ tomcat.maxidletime=10000
 tomcat.acceptcount=100
 
 build.development.mode=false
-tomcat.development.mode=true
-
+tomcat.development.mode=false
+ 
 
 java.mem=6G
 cache.main=300000
@@ -327,7 +293,7 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 #------------------------------------------------------------------------------------------
-# Proxy and port Properties  localhost:9002
+# Proxy and port Properties
 #------------------------------------------------------------------------------------------
 tomcat.site.proxyName=dev.edgewell.com
 tomcat.site.hostName=edgewell.dev.com
@@ -351,14 +317,8 @@ energizer.customer.support.to.email=epcvalidatione@gmail.com
 cronjobs.from.email=epcvalidatione@gmail.com 
 
 #ICS email props
-ICS.EMAILID=Shweta.Sharma@mindtree.com
+ICS.EMAILID=Siddaraju.Nagappa@mindtree.com
 ICS.DISPLAYNAME="ICS-MEMBER"
 
 #Enviorment 
-mail.enviorment=local
-
-##data hub properties##
-
-datahub.extension.exportURL=http://localhost:9001/datahubadapter
-datahub.extension.userName=admin
-datahub.extension.password=nimda
+mail.enviorment=dev
