--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -130,11 +130,7 @@ reducedVolume.disable.2slipsheet.40FT=5
 heightInInches.40FT=102
 heightInInches.20FT=87
 reduced.height=12.7
-
-<<<<<<< HEAD
 total.palletcount.2slipsheet=44
-=======
->>>>>>> origin/ContainerUtilization_Phase2
 
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
@@ -146,12 +142,9 @@ fourty.feet.container.volume.disable=60.88122
 twenty.feet.container=20FT
 forty.feet.container=40FT
 
-<<<<<<< HEAD
-=======
 slot.percentage.40ft=70
 slot.percentage.20ft=60
 
->>>>>>> origin/ContainerUtilization_Phase2
 excelFileSize=1000000
 
 #------------------------------------------------------ 
@@ -159,6 +152,25 @@ excelFileSize=1000000
 #------------------------------------------------------
 catalogName=personalCareProductCatalog
 version=Online
+
+
+#----------------------------------------------
+# Solr Server standalone configurations
+#----------------------------------------------
+
+legacyMode = false
+solrserver.forceRestart=true
+solrserver.instances.default.autostart=true
+solrserver.instances.default.port=8983
+solrserver.instances.default.memory=512m
+solrserver.failOnError=true
+solrserver.maxStatusRetries=10
+solrserver.statusInterval=5000
+
+solrfacetsearch.synonyms.filter.ignoreCase=true
+solrfacetsearch.stopwords.filter.ignoreCase=true
+
+
 
 
 #invoice piece properties
