--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -154,6 +154,24 @@ excelFileSize=1000000
 catalogName=personalCareProductCatalog
 version=Online
 
+#----------------------------------------------
+# Solr Server standalone configurations
+#----------------------------------------------
+
+legacyMode = false
+solrserver.forceRestart=true
+solrserver.instances.default.autostart=true
+solrserver.instances.default.port=8983
+solrserver.instances.default.memory=512m
+solrserver.failOnError=true
+solrserver.maxStatusRetries=10
+solrserver.statusInterval=5000
+
+solrfacetsearch.synonyms.filter.ignoreCase=true
+solrfacetsearch.stopwords.filter.ignoreCase=true
+
+
+
 
 #invoice piece properties
 invoice.filepath=C:\\Users\\m1023278\\Downloads\\ClassDiagramOrder 
