--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -148,7 +148,7 @@ forty.feet.container=40FT
 slot.percentage.40ft=70
 slot.percentage.20ft=60
 
->>>>>>> origin/ContainerUtilization_Phase2
+
 excelFileSize=1000000
 
 #------------------------------------------------------ 
@@ -156,6 +156,24 @@ excelFileSize=1000000
 #------------------------------------------------------
 catalogName=personalCareProductCatalog
 version=Online
+
+#----------------------------------------------
+# Solr Server standalone configurations
+#----------------------------------------------
+
+legacyMode = false
+solrserver.forceRestart=true
+solrserver.instances.default.autostart=true
+solrserver.instances.default.port=8983
+solrserver.instances.default.memory=512m
+solrserver.failOnError=true
+solrserver.maxStatusRetries=10
+solrserver.statusInterval=5000
+
+solrfacetsearch.synonyms.filter.ignoreCase=true
+solrfacetsearch.stopwords.filter.ignoreCase=true
+
+
 
 
 #invoice piece properties
