--- a/config/dev-local.properties
+++ b/config/dev-local.properties
@@ -7,6 +7,8 @@ energizerstorefront.webroot=
 b2bStorefrontContextRoot=
 installed.tenants=t1,junit
 
+energizerstorefront.additionalWebSpringConfigs.addonsupport=classpath:/addonsupport/web/spring/addonsupport-b2c-web-spring.xml
+
 lang.packs=en,es
 
 ####################################################################################
