Following changes made: 1) minor ui changes while creating user 2) validating contact number 3) configuration changes to make solr standalone

--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -165,7 +165,7 @@ version=Online
 
 legacyMode = false
 solrserver.forceRestart=true
-solrserver.instances.default.autostart=true
+solrserver.instances.default.autostart=false
 solrserver.instances.default.port=8983
 solrserver.instances.default.memory=512m
 solrserver.failOnError=true
