1) Url change issue with language change resolved 2) Updated local-hybris.properties under production folder

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -187,7 +187,7 @@ feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
-simulateTimeOutinSeconds=30
+simulateTimeOutinSeconds=120
 
 #--------------------------------------------------------
 #Biz Talk URL for order simulate, create and report
@@ -212,10 +212,11 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #---------------------------------------------
 #website url
 #---------------------------------------------
-website.personalCare.http=http://orderportal.edgewell.com
-website.personalCare.https=https://orderportal.edgewell.com
-media.personalCare.http=http://orderportal.edgewell.com
-media.personalCare.https=https://orderportal.edgewell.com
+website.personalCare.http=http://hybrisportal.edgewell.com:9001/
+website.personalCare.https=https://hybrisportal.edgewell.com:9002/
+media.personalCare.http=http://hybrisportal.edgewell.com:9001/
+media.personalCare.https=https://hybrisportal.edgewell.com:9002/
+
 storefront.security.default.required.channel=https
 
 #----------------------------------
@@ -334,13 +335,14 @@ mail.enviorment=
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
-#tomcat.site.hostName=live.energizer.com
+tomcat.site.proxyName=orderportal.edgewell.com
+tomcat.site.hostName=orderportal.edgewell.com
 
 #The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
-#proxy.http.port=80
+proxy.http.port=80
 
 # The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
-#proxy.ssl.port=443
+proxy.ssl.port=443
 
 #Use this for Apache->hybris is based on ajp .Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
 #tomcat.ajp.useipv=true
