Changed files for PRC Options Container Optimization CR

--- a/config/local.properties
+++ b/config/local.properties
@@ -116,11 +116,16 @@ energizer.default.containerHeight=40FT
 energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
 possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE,2 SLIP SHEETS,2 WOODEN BASE
 possiblePackingOptions.20FT=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE
+possiblePRCPackingOptions.20FT=2 SLIP SHEETS
+possiblePRCPackingOptions.40FT=2 SLIP SHEETS
 
 possibleContainerHeights=40FT,20FT
+possiblePRCContainerHeights=PRC_20FT,PRC_40FT
 energizer.disable.packingOption=2 SLIP SHEETS
 twenty.feet.container=20FT
 forty.feet.container=40FT
+prctwenty.feet.container=PRC_20FT
+prcforty.feet.container=PRC_40FT
 
 total.palletcount.2slipsheet=44
 
