PCR - Enhancement done

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -130,6 +130,7 @@ basket.validation.unavailable=Unfortunately {0} was removed from your cart as it
 basket.view.basket=View basket
 basket.your.shopping.basket=Your Shopping Basket
 
+basket.page.layersPerPallet=Number of layers per pallet
 basket.page.casesPerPallet=Number of cases per pallet
 basket.page.casesPerLayer= Number of cases per layer
 
