Product Variant Images - Updated

--- a/config/local.properties
+++ b/config/local.properties
@@ -99,6 +99,13 @@ sharedFolderPath=W:\\CSVFeedFolder
 customerUserListPath=w:\\userlists
 
 
+#Image File Path
+
+energizer.thumbnailPath=D:\\IMAGE\\Images for Personal Care\\96Wx96H
+energizer.displayImagePath=D:\\IMAGE\\Images for Personal Care\\300Hx300W
+
+
+
 #Catalog Download File Path
 
 
