Image Ref Mat Id Updated

--- a/config/local.properties
+++ b/config/local.properties
@@ -9,11 +9,11 @@ hac.webroot=/hac
 energizerstorefront.webroot=
 b2bStorefrontContextRoot=
 
-energizerstorefront.additionalWebSpringConfigs.addonsupport=classpath:/addonsupport/web/spring/addonsupport-b2c-web-spring.xml
-
-installed.tenants=t1,junit
+installed.tenants=t1
 
 lang.packs=en,es
+
+energizerstorefront.additionalWebSpringConfigs.addonsupport=classpath:/addonsupport/web/spring/addonsupport-b2c-web-spring.xml
 
 forgottenPassword.emailContext.expiresInMinutes=30
 forgottenPassword.emailContext.expiresInSeconds=1800
@@ -25,7 +25,6 @@ isEPCEnabled=true
 isEHPEnabled=false
 
 energizer.default.password=Energizer@123
-
 #---------------------------------------------
 # Email setup											   						   #
 #---------------------------------------------
@@ -41,6 +40,7 @@ mail.from=epcvalidatione@gmail.com
 mail.replyto=epcvalidatione@gmail.com
 #---------------------------------------------
 # properties for interface types
+#---------------------------------------------
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
 interfaceType_SalesArea =energizerSalesAreaUomCSVProcessor
 interfaceType_B2BUser =energizerB2BUserCSVProcessor
@@ -54,6 +54,9 @@ interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
+
+
+
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
@@ -65,6 +68,7 @@ email_Address=Siddaraju.Nagappa@mindtree.com
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
 feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
+
 
 #Mandatory Feeds for OfflineOrder CSV Processor
 #Basic Mandatory feeds for OfflineOrder CSV Processor are Status,SAPOrderNo,B2BAccount,CreatedByUser,ERPMaterialID,UOM
@@ -94,20 +98,18 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 sharedFolderPath=W:\\CSVFeedFolder
 
-#-----------------------------------------------------
-#customeruserslist location
-customerUserListPath=w:\\userlists
+#CustomerUsersList Location
 
+customerUserListPath=W:\\userlists
 
 #Image File Path
 
-energizer.thumbnailPath=D:\\IMAGE\\Images for Personal Care\\96Wx96H
-energizer.displayImagePath=D:\\IMAGE\\Images for Personal Care\\300Hx300W
+energizer.thumbnailPath=W:\\IMAGE\\Images for Personal Care\\96Wx96H
+energizer.displayImagePath=W:\\IMAGE\\Images for Personal Care\\300Hx300W
 
 
 
 #Catalog Download File Path
-
 
 catalogdownload.downloadPath=Downloads
 
@@ -129,8 +131,7 @@ possibleContainerHeights=40FT,20FT
 energizer.disable.packingOption=2 SLIP SHEETS
 twenty.feet.container=20FT
 forty.feet.container=40FT
-prctwenty.feet.container=PRC_20FT
-prcforty.feet.container=PRC_40FT
+
 
 total.palletcount.2slipsheet=44
 
@@ -148,8 +149,8 @@ twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
 
-twenty.feet.container.volume.disable=25.7683304
-fourty.feet.container.volume.disable=60.88122
+twenty.feet.container.volume.disable=24.0693 
+fourty.feet.container.volume.disable=46.75111
 twenty.feet.container=20FT
 forty.feet.container=40FT
 
