--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -1590,3 +1590,5 @@ palStack.secondStack=Stack-2
 password.questionOranswer.donotMatch=Password question or answer doesnot match that to entered email id profile
 password.question.noSet=Please contact customer care, your password question or answer have not been set
 password.reset.invalidEmailId=Please enter a valid Email Id
+
+order.order.totals.taxes.info=Valid taxes/VAT will be applicable at the time of ordering.
